--- a/templates/index.html
+++ b/templates/index.html
@@ -2,19 +2,26 @@
 <html>
 <head>
     <title>Cyber Threat Scanner</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Cyber Threat Scanner</h1>
+
+<div class="container">
+    <h1>🛡 CYBER THREAT SCANNER</h1>
 
     <form method="POST" enctype="multipart/form-data">
         <input type="file" name="file" required>
-        <br><br>
-        <button type="submit">Scan File</button>
+        <br>
+        <button type="submit">SCAN FILE</button>
     </form>
 
     {% if result %}
-        <h3>Scan Result:</h3>
+    <div class="result">
+        <h3>Scan Result</h3>
         <p>{{ result }}</p>
+    </div>
     {% endif %}
+</div>
+
 </body>
 </html>
